--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "cloudflared-gui",
   "version": "1.0.0",
   "private": true,
+  "author": {
+    "name": "Jay Simons",
+    "email": "jay@yaa.bz"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/designly1/cloudflared-ui.git"
+  },
+  "homepage": "https://cloudflare-ui.yaa.bz",
   "workspaces": [
     "apps/*",
     "packages/*"
