feat: add environment variable configuration support
- Make server host/port configurable via HOST and PORT env vars
- Make cloudflared service name configurable via CLOUDFLARED_SERVICE_NAME
- Make config path configurable via CLOUDFLARED_CONFIG_PATH
- Update documentation with environment variable examples
- Update systemd service file with env var examples
- All values have sensible defaults for backward compatibility

--- a/apps/backend/cloudflared-gui-backend.service
+++ b/apps/backend/cloudflared-gui-backend.service
@@ -11,6 +11,13 @@ ExecStart=/opt/cloudflared-gui/backend/server
 Restart=on-failure
 RestartSec=5s
 
+# Environment variables (optional - defaults shown)
+# Uncomment and modify as needed:
+# Environment="HOST=127.0.0.1"
+# Environment="PORT=8080"
+# Environment="CLOUDFLARED_SERVICE_NAME=cloudflared.service"
+# Environment="CLOUDFLARED_CONFIG_PATH=/etc/cloudflared/config.yml"
+
 # Security settings
 NoNewPrivileges=false
 PrivateTmp=true
