--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Backend Configuration
-BACKEND_HOST=127.0.0.1
-BACKEND_PORT=8080
+HOST=127.0.0.1
+PORT=8080
 
-# Cloudflared Config Path
+# Cloudflared Service Configuration
+CLOUDFLARED_SERVICE_NAME=cloudflared.service
 CLOUDFLARED_CONFIG_PATH=/etc/cloudflared/config.yml
 
 # Frontend Configuration (for production builds)
